# edgecloud

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/actions/deploy-preview/: action.yml
.github/workflows/: ci.yml  preview.yml
edge-cli/src/: main.rs
edge-cli/src/api/: client.rs
edge-cli/src/commands/: auth.rs
edge-control-plane/cmd/api/: main.go
edge-control-plane/docs/api/: openapi.yaml
edge-control-plane/internal/app/: app.go
edge-control-plane/internal/domain/: plans.go  tenant.go  tenant_test.go
edge-control-plane/internal/handler/: api_key.go  audithelper.go  auth_test.go  internal.go  internal_auto_rollback_test.go  internal_sync_test.go  migration_test.go  secrets.go  tenant.go  tenant_test.go
edge-control-plane/internal/nats/: publisher.go
edge-control-plane/internal/service/: env.go  (+11 more)
edge-control-plane/migrations/: 005_api_key_hash_algorithm.up.sql  006_api_key_lookup_hash.up.sql  013_quotas_used_requests.down.sql  013_quotas_used_requests.up.sql  014_audit_logs.up.sql  015_webhooks.down.sql  015_webhooks.up.sql  roundtrip_test.go
edge-control-plane/scripts/: openapi_check.go
edge-ingress/src/: caddy.rs  config.rs  heartbeats.rs
edge-runtime/: Cargo.toml
edge-runtime/src/: linker.rs  runtime.rs  store.rs
edge-worker/: Cargo.toml
edge-worker/src/: auth.rs  config.rs  dispatch.rs  downloader.rs  log_forwarder.rs  main.rs  nats.rs  state.rs  supervisor.rs
edge-worker/tests/: ingress_wire_integration.rs  integration_tests.rs  layer_integration.rs
samples/hello/: Cargo.toml  README.md  edge.toml
samples/hello/src/: lib.rs
(+7 files in other folders)
